Agrega workflow de GitHub Actions

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -4,7 +4,7 @@ on : [push]
 
 jobs:
   uno:
-    runs-on: ubunto-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Mensaje
         run: echo "Hola mundo, james "
