--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -5,6 +5,24 @@ on : [push]
 jobs:
   uno:
     runs-on: ubuntu-latest
+    
     steps:
       - name: Mensaje
-        run: echo "Hola mundo, james "
+        run: echo "Hola mundo!!!"
+      - name: Touch File  # Crea
+        run: |
+          touch hola.txt
+          ls -al
+      - name: Set text  # Agrega
+        run: |
+          echo "Hola mundo" >> hola.txt
+          ls -al
+      - name: Read file  # Lee
+        run: cat hola.txt
+
+  dos:
+    runs-on: ubuntu-latest
+    needs: [uno]
+    steps:
+      - name: Directorio
+        run: ls -al
