--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -35,7 +35,7 @@ jobs:
         run: |
           cd .github/workflows
           ls -al
-          chmod +x scrtip.sh
+          chmod +x script.sh
           ls -al
 
 
